// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover /> Default story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
  data-open=""
>
  <button
    aria-controls="headlessui-popover-panel-:r4:"
    aria-expanded="true"
    class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
    data-active=""
    data-focus=""
    data-headlessui-state="open active focus"
    data-open=""
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-:r2:"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      Open Popover
    </span>
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:r3:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> FocusClickableElement story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
  data-open=""
>
  <button
    aria-controls="headlessui-popover-panel-:rg:"
    aria-expanded="true"
    class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
    data-active=""
    data-headlessui-state="open active"
    data-open=""
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-:re:"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      Open Popover
    </span>
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:rf:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;

exports[`<Popover /> Top story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
  data-open=""
>
  <button
    aria-controls="headlessui-popover-panel-:ra:"
    aria-expanded="true"
    class="button button--layout-none button--primary button--lg button--size-lg button--variant-default"
    data-active=""
    data-focus=""
    data-headlessui-state="open active focus"
    data-open=""
    data-testid="popover-trigger-button"
    id="headlessui-popover-button-:r8:"
    type="button"
  >
    <span
      class="text text--label-lg button__text"
    >
      Open Popover
    </span>
  </button>
  <button
    aria-hidden="true"
    data-headlessui-focus-guard="true"
    id="headlessui-focus-sentinel-:r9:"
    style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
    type="button"
  />
</div>
`;
